WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239560
Address recent deprecation warnings on iOS
https://bugs.webkit.org/show_bug.cgi?id=239560
Summary
Address recent deprecation warnings on iOS
Megan Gardner
Reported
2022-04-20 12:54:33 PDT
Move off of depricated methods and add allow deprication for harder to refector code.
Attachments
Patch
(19.80 KB, patch)
2022-04-20 12:55 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(19.59 KB, patch)
2022-04-20 14:03 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(19.58 KB, patch)
2022-04-20 14:08 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2022-04-20 12:55:50 PDT
Created
attachment 458005
[details]
Patch
Wenson Hsieh
Comment 2
2022-04-20 13:07:58 PDT
Comment on
attachment 458005
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=458005&action=review
> Source/WebKit/ChangeLog:3 > + Move off of depricated methods and add allow deprication for harder to refector code.
Nit - Spelling errors, but I would also just change this to something like: "Address recent deprecation warnings on iOS"
> Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:288 > + //[item setDontDismiss:!_customMenuActionInfo->dismissesAutomatically];
It's not clear to me why this is going away. IIRC, the layout test that uses this bit checks that the WebKit client can install a custom action in the callout bar that is configured to not dismiss the callout bar when activated (this simulates what Mail on iOS does in compose).
Megan Gardner
Comment 3
2022-04-20 14:03:18 PDT
Created
attachment 458012
[details]
Patch
Megan Gardner
Comment 4
2022-04-20 14:08:27 PDT
Created
attachment 458013
[details]
Patch for landing
EWS
Comment 5
2022-04-20 14:44:10 PDT
Committed
r293117
(
249823@main
): <
https://commits.webkit.org/249823@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458013
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-04-20 14:45:14 PDT
<
rdar://problem/92052936
>
Simon Fraser (smfr)
Comment 7
2022-04-20 20:34:26 PDT
This broke internal iOS builds against 15.4 SDKs
Wenson Hsieh
Comment 8
2022-04-20 20:58:13 PDT
(In reply to Simon Fraser (smfr) from
comment #7
)
> This broke internal iOS builds against 15.4 SDKs
Landed
https://trac.webkit.org/r293142
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug