Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.mm
@@ -111,9 +111,11 @@ IGNORE_WARNINGS_END
 #else
         [center addObserver:self selector:@selector(_invokeShowKeyboardCallbackIfNecessary) name:UIKeyboardDidShowNotification object:nil];
         [center addObserver:self selector:@selector(_invokeHideKeyboardCallbackIfNecessary) name:UIKeyboardDidHideNotification object:nil];
+        ALLOW_DEPRECATED_DECLARATIONS_BEGIN
         [center addObserver:self selector:@selector(_didShowMenu) name:UIMenuControllerDidShowMenuNotification object:nil];
         [center addObserver:self selector:@selector(_willHideMenu) name:UIMenuControllerWillHideMenuNotification object:nil];
         [center addObserver:self selector:@selector(_didHideMenu) name:UIMenuControllerDidHideMenuNotification object:nil];
+        ALLOW_DEPRECATED_DECLARATIONS_END
         [center addObserver:self selector:@selector(_willPresentPopover) name:@"UIPopoverControllerWillPresentPopoverNotification" object:nil];
         [center addObserver:self selector:@selector(_didDismissPopover) name:@"UIPopoverControllerDidDismissPopoverNotification" object:nil];
         self.UIDelegate = self;
@@ -282,8 +284,10 @@ IGNORE_WARNINGS_END
         return;
 
     auto item = adoptNS([[UIMenuItem alloc] initWithTitle:_customMenuActionInfo->name.get() action:@selector(performCustomAction:)]);
+    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
     [item setDontDismiss:!_customMenuActionInfo->dismissesAutomatically];
     UIMenuController *controller = UIMenuController.sharedMenuController;
+    ALLOW_DEPRECATED_DECLARATIONS_END
     controller.menuItems = @[ item.get() ];
     [controller update];
 }
@@ -302,7 +306,9 @@ IGNORE_WARNINGS_END
 - (void)resetCustomMenuAction
 {
     _customMenuActionInfo.reset();
+    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
     UIMenuController.sharedMenuController.menuItems = @[ ];
+    ALLOW_DEPRECATED_DECLARATIONS_END
 }
 
 - (void)performCustomAction:(id)sender
@@ -325,7 +331,9 @@ IGNORE_WARNINGS_END
     if (isCustomAction)
         canPerformActionByDefault = _customMenuActionInfo.has_value();
 
+    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
     if (canPerformActionByDefault && _allowedMenuActions && sender == UIMenuController.sharedMenuController) {
+    ALLOW_DEPRECATED_DECLARATIONS_END
         BOOL isAllowed = NO;
         if (isCustomAction) {
             for (NSString *allowedAction in _allowedMenuActions.get()) {
